# fastapi

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
app/: main.py  pyproject.toml
