
[tool.poetry]
name = "fast-api"
version = "0.0.2"
description = "FastAPI boilerplate with Docker"
authors = ["Marcelo Munhoz <me@marcelomunhoz.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"